--- a/StMarket/src/main/AndroidManifest.xml
+++ b/StMarket/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_stmarket"
         android:label="ST Market"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+        android:theme="@android:style/Theme.DeviceDefault.Light"
         tools:replace="android:icon">
         <activity
             android:name="com.rastreabilidadeInterna.geral.MainSplashScreen"
@@ -50,15 +50,13 @@
         </activity>
         <activity
             android:name="com.rastreabilidadeInterna.geral.ActivityTelaInicial"
-            android:label="ST Market v3.12"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
+            android:label="ST Market v3.12"/>
         <activity
             android:name="com.rastreabilidadeInterna.controleEstoque.ActivityControleEstoque"
             android:label="@string/title_activity_controleestoque_principal"
             android:launchMode="singleTop"
             android:parentActivityName="com.rastreabilidadeInterna.geral.ActivityTelaInicial"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="amdroid.suport.PARENT_ACTIVITY"
                 android:value="com.rastreabilidadeInterna.geral.abas" />
@@ -68,8 +66,7 @@
             android:label="@string/title_activity_fracionamento_principal"
             android:launchMode="singleTop"
             android:parentActivityName="com.rastreabilidadeInterna.geral.ActivityTelaInicial"
-            android:screenOrientation="landscape"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:screenOrientation="landscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rastreabilidadeInterna.geral.ActivityTelaInicial" />
@@ -85,8 +82,7 @@
             android:label="@string/title_activity_preparacao_principal"
             android:launchMode="singleTop"
             android:parentActivityName="com.rastreabilidadeInterna.geral.ActivityTelaInicial"
-            android:screenOrientation="landscape"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:screenOrientation="landscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rastreabilidadeInterna.preparacao.preparacaoPrincipal" />
@@ -97,8 +93,7 @@
         <activity
             android:name="com.rastreabilidadeInterna.geral.ActivityCadastroDeUsuario"
             android:label="@string/title_activity_cadastrodeusuarios"
-            android:parentActivityName="com.rastreabilidadeInterna.geral.ActivityTelaInicial"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:parentActivityName="com.rastreabilidadeInterna.geral.ActivityTelaInicial">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rastreabilidadeInterna.geral.ActivityTelaInicial" />
@@ -110,8 +105,7 @@
         <activity
             android:name="com.rastreabilidadeInterna.fracionamento.ActivityGranel"
             android:label="@string/title_activity_fracionamento_granel"
-            android:parentActivityName="com.rastreabilidadeInterna.fracionamento.ActivityFracionamento"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:parentActivityName="com.rastreabilidadeInterna.fracionamento.ActivityFracionamento">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rastreabilidadeInterna.fracionamento.ActivityFracionamento" />
@@ -119,27 +113,24 @@
         <activity
             android:name="com.rastreabilidadeInterna.geral.ActivityConfiguracaoDeArea"
             android:label="@string/title_activity_activity_configuracao_de_area"
-            android:parentActivityName="com.rastreabilidadeInterna.geral.ActivityTelaInicial"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:parentActivityName="com.rastreabilidadeInterna.geral.ActivityTelaInicial">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rastreabilidadeInterna.geral.ActivityTelaInicial" />
-        </activity>
-        <activity
-            android:name="com.rastreabilidadeInterna.centrodedistribuicao.CentroDeDistribuicao"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_centro_de_distribuicao"
-            android:parentActivityName="com.rastreabilidadeInterna.geral.ActivityTelaInicial"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.rastreabilidadeInterna.geral.ActivityTelaInicial" />
+            <activity
+                android:name="com.rastreabilidadeInterna.centrodedistribuicao.CentroDeDistribuicao"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:label="@string/title_activity_centro_de_distribuicao"
+                android:parentActivityName="com.rastreabilidadeInterna.geral.ActivityTelaInicial">
+                <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.rastreabilidadeInterna.geral.ActivityTelaInicial" />
+            </activity>
         </activity>
         <activity
             android:name="com.rastreabilidadeInterna.controleEstoque.ActivityHistoricoControleDeEstoque"
             android:label="@string/title_activity_activity_historico_controle_de_estoque"
-            android:parentActivityName="com.rastreabilidadeInterna.controleEstoque.ActivityControleEstoque"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:parentActivityName="com.rastreabilidadeInterna.controleEstoque.ActivityControleEstoque">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rastreabilidadeInterna.controleEstoque.ActivityControleEstoque" />
@@ -158,8 +149,7 @@
         <activity
             android:name="com.rastreabilidadeInterna.fracionamento.ActivityHistoricoFracionamento"
             android:label="@string/title_activity_activity_historico_fracionamento"
-            android:parentActivityName="com.rastreabilidadeInterna.fracionamento.ActivityFracionamento"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:parentActivityName="com.rastreabilidadeInterna.fracionamento.ActivityFracionamento">
             >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -172,8 +162,7 @@
         <activity
             android:name="com.rastreabilidadeInterna.centrodedistribuicao.ActivityControleDeEstoqueCD"
             android:label="@string/title_activity_activity_controle_de_estoque_cd"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name="com.rastreabilidadeInterna.centrodedistribuicao.ActivityAmostragem"
             android:label="@string/title_activity_activity_amostragem"
@@ -208,8 +197,7 @@
         <activity
             android:name="com.rastreabilidadeInterna.centrodedistribuicao.ActivityControleDeEstoqueCDHortifruti"
             android:label="@string/title_activity_activity_controle_de_estoque_cdhortifruti"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name="com.rastreabilidadeInterna.centrodedistribuicao.ActivityAmostragemHortifruti"
             android:label="@string/title_activity_activity_amostragem_hortifruti"
@@ -230,8 +218,7 @@
         <activity
             android:name="com.rastreabilidadeInterna.centrodedistribuicao.ActivityTeste"
             android:label="@string/title_activity_activity_teste"
-            android:parentActivityName="com.rastreabilidadeInterna.centrodedistribuicao.ActivityTestes"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+            android:parentActivityName="com.rastreabilidadeInterna.centrodedistribuicao.ActivityTestes">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rastreabilidadeInterna.centrodedistribuicao.ActivityTestes" />
